2008-02-18  Dmitry V. Levin  <ldv@altlinux.org>

	* libpam/pam_handlers.c (_pam_assemble_line): Fix potential
	buffer overflow.
	* xtests/tst-pam_assemble_line1.pamd: New test for
	_pam_assemble_line.
	* xtests/tst-pam_assemble_line1.sh: New script for
	tst-pam_assemble_line1.
	* xtests/Makefile.am (NOSRCTESTS): Add tst-pam_assemble_line1.
	(EXTRA_DIST): Add tst-pam_assemble_line1.pamd and
	tst-pam_assemble_line1.sh

	* modules/pam_exec/pam_exec.c (call_exec): Fix asprintf return
	code check.

2008-02-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.10.0

	* configure.in: set version number.

	* modules/pam_rhosts/Makefile.am: Remove pam_rhosts_auth.
	* modules/pam_rhosts/pam_rhosts_auth.c: Removed.
	* modules/pam_rhosts/tst-pam_rhosts_auth: Removed.

	* modules/pam_namespace/Makefile.am (noinst_HEADERS): Add
	pam_namespace.h.

2008-02-13  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_namespace/Makefile.am: Add argv_parse files and namespace.d
	dir.
	* modules/pam_namespace/argv_parse.c: New file.
	* modules/pam_namespace/argv_parse.h: New file.
	* modules/pam_namespace/namespace.conf.5.xml: Document new features.
	* modules/pam_namespace/pam_namespace.8.xml: Likewise.
	* modules/pam_namespace/pam_namespace.h: Use SECURECONF_DIR define.
	Define NAMESPACE_D_DIR and NAMESPACE_D_GLOB. Define new option flags
	and polydir flags.
	(polydir_s): Add rdir, replace exclusive with flags, add init_script,
	owner, group, and mode.
	(instance_data): Add ruser, gid, and ruid.
	* modules/pam_namespace/pam_namespace.c: Remove now unused copy_ent().
	(add_polydir_entry): Add the entry directly, no copy.
	(del_polydir): New function.
	(del_polydir_list): Call del_polydir().
	(expand_variables, parse_create_params, parse_iscript_params,
	parse_method): New functions.
	(process_line): Call expand_variables() on polydir and instance prefix.
	Call argv_parse() instead of strtok_r(). Allocate struct polydir_s on heap.