@@ -1,3 +1,12 @@
+2008-02-21  Tomas Mraz <t8m@centrum.cz>
+
+	* libpam/pam_audit.c (_pam_audit_writelog): Silence syslog
+	message on non-error return.
+
+	* modules/pam_unix/unix_chkpwd.c (main): Proceed as unprivileged
+	user when checking password of another user.
+	* modules/pam_unix/unix_update.c: Fix comment.
+
 2008-02-18  Dmitry V. Levin  <ldv@altlinux.org>
 
 	* libpam/pam_handlers.c (_pam_assemble_line): Fix potential
